@@ -1,30 +1,29 @@
 package ru.yandex.practicum.mymarket.services;
 
-import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.Mockito;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Sort;
 import org.springframework.http.HttpStatus;
 import org.springframework.test.util.ReflectionTestUtils;
 import org.springframework.web.server.ResponseStatusException;
+import reactor.core.publisher.Flux;
+import reactor.core.publisher.Mono;
+import reactor.test.StepVerifier;
 import ru.yandex.practicum.mymarket.helpers.CatalogHelper;
 import ru.yandex.practicum.mymarket.interfaces.CartService;
 import ru.yandex.practicum.mymarket.mappers.ItemMapper;
 import ru.yandex.practicum.mymarket.models.ItemModel;
-import ru.yandex.practicum.mymarket.models.ItemSortEnumModel;
 import ru.yandex.practicum.mymarket.repositories.ItemRepository;
 import ru.yandex.practicum.mymarket.viewmodels.ItemViewModel;
 
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
-import java.util.Optional;
 
 /**
  * <summary>
@@ -57,23 +56,22 @@ public class ItemServiceImplTest {
 
     /**
      * <summary>
-     * Проверяет, что метод возвращает полный список доменных моделей товаров из репозитория.
+     * Проверяет, что метод возвращает полный список доменных моделей товаров, собранных из реактивного потока Flux.
      * </summary>
      **/
     @Test
-    void findAllShouldReturnListOfItemsFromRepository()
-    {
-        var expectedItems = List.of(
-                new ItemModel("Novation Launchkey", "Studio MIDI", "/img1.png", 45000L),
-                new ItemModel("Xiaomi Mi Mix 4", "Flagship Phone", "/img2.png", 60000L)
-        );
-        Mockito.when(itemRepository.findAll()).thenReturn(expectedItems);
+    void findAllShouldReturnListOfItemsFromRepository() {
+        var item1 = new ItemModel("Novation Launchkey", "Studio MIDI", "/img1.png", 45000L);
 
-        var actualItems = itemService.findAll();
+        var item2 = new ItemModel("Xiaomi Mi Mix 4", "Flagship Phone", "/img2.png", 60000L);
 
-        Assertions.assertEquals(expectedItems.size(), actualItems.size());
+        Mockito.when(itemRepository.findAll()).thenReturn(Flux.just(item1, item2));
 
-        Assertions.assertEquals(expectedItems, actualItems);
+        StepVerifier.create(itemService.findAll().collectList())
+                .expectNextMatches(actualItems ->
+                        actualItems.size() == 2 && actualItems.getFirst().getTitle().equals("Novation Launchkey") && actualItems.get(1).getTitle().equals("Xiaomi Mi Mix 4")
+                )
+                .verifyComplete();
 
         Mockito.verify(itemRepository, Mockito.times(1)).findAll();
     }
@@ -84,12 +82,11 @@ public class ItemServiceImplTest {
 
     /**
      * <summary>
-     * Проверяет успешное получение и маппинг обогащенной View-модели товара при его наличии в БД.
+     * Проверяет успешное получение и маппинг обогащенной View-модели товара из реактивных источников при его наличии в БД.
      * </summary>
      **/
     @Test
-    void findByIdShouldReturnMappedViewModelWhenItemExists()
-    {
+    void findByIdShouldReturnMappedViewModelWhenItemExists() {
         var itemId = 1L;
 
         var cartCount = 3;
@@ -100,40 +97,41 @@ public class ItemServiceImplTest {
 
         var expectedViewModel = new ItemViewModel(itemId, "Novation Launchkey", "Studio MIDI", "/img1.png", 45000L, cartCount);
 
-        Mockito.when(itemRepository.findById(itemId)).thenReturn(Optional.of(itemModel));
+        Mockito.when(itemRepository.findById(itemId)).thenReturn(Mono.just(itemModel));
 
-        Mockito.when(cartService.findCountForItem(itemId)).thenReturn(cartCount);
+        Mockito.when(cartService.findCountForItem(itemId)).thenReturn(Mono.just(cartCount));
 
         Mockito.when(itemMapper.toViewModel(itemModel, cartCount)).thenReturn(expectedViewModel);
 
-        var actualViewModel = itemService.findById(itemId);
-
-        Assertions.assertNotNull(actualViewModel);
-
-        Assertions.assertEquals(expectedViewModel.title(), actualViewModel.title());
-
-        Assertions.assertEquals(cartCount, actualViewModel.count());
+        StepVerifier.create(itemService.findById(itemId))
+                .expectNextMatches(actualViewModel ->
+                        actualViewModel.title().equals(expectedViewModel.title()) && actualViewModel.count() == cartCount
+                )
+                .verifyComplete();
     }
 
     /**
      * <summary>
-     * Проверяет генерацию исключения ResponseStatusException со статусом 404 NOT FOUND, если товар отсутствует.
+     * Проверяет генерацию исключения ResponseStatusException со статусом 404 NOT FOUND из Mono.error(), если товар отсутствует.
      * </summary>
      **/
     @Test
-    void findByIdShouldThrowResponseStatusExceptionWhenItemDoesNotExist()
-    {
+    void findByIdShouldThrowResponseStatusExceptionWhenItemDoesNotExist() {
         long nonExistingId = 999L;
 
-        Mockito.when(itemRepository.findById(nonExistingId)).thenReturn(Optional.empty());
+        Mockito.when(itemRepository.findById(nonExistingId)).thenReturn(Mono.empty());
 
-        var exception = Assertions.assertThrows(ResponseStatusException.class, () -> {
-            itemService.findById(nonExistingId);
-        });
-
-        Assertions.assertEquals(HttpStatus.NOT_FOUND, exception.getStatusCode());
-
-        Assertions.assertEquals("Item not found.", exception.getReason());
+        StepVerifier.create(itemService.findById(nonExistingId))
+                .expectErrorMatches(throwable ->
+                        {
+                            if (!(throwable instanceof ResponseStatusException) ||
+                                    !((ResponseStatusException) throwable).getStatusCode().equals(HttpStatus.NOT_FOUND))
+                                return false;
+                            assert ((ResponseStatusException) throwable).getReason() != null;
+                            return ((ResponseStatusException) throwable).getReason().equals("Item not found.");
+                        }
+                )
+                .verify();
     }
 
     // endregion
@@ -142,42 +140,44 @@ public class ItemServiceImplTest {
 
     /**
      * <summary>
-     * Проверяет извлечение чистой доменной модели по идентификатору товара.
+     * Проверяет извлечение чистой доменной модели по идентификатору товара через Mono.
      * </summary>
      **/
     @Test
-    void findModelByIdShouldReturnDomainModelWhenItemExists()
-    {
+    void findModelByIdShouldReturnDomainModelWhenItemExists() {
         long itemId = 42L;
 
         var expectedModel = new ItemModel("Xiaomi Mi Mix 4", "Flagship Phone", "/img2.png", 60000L);
 
-        Mockito.when(itemRepository.findById(itemId)).thenReturn(Optional.of(expectedModel));
+        Mockito.when(itemRepository.findById(itemId)).thenReturn(Mono.just(expectedModel));
 
-        var actualModel = itemService.findModelById(itemId);
-
-        Assertions.assertNotNull(actualModel);
-
-        Assertions.assertEquals(expectedModel, actualModel);
+        StepVerifier.create(itemService.findModelById(itemId))
+                .expectNext(expectedModel)
+                .verifyComplete();
     }
 
     /**
      * <summary>
-     * Проверяет генерацию 404 ошибки при поиске доменной модели несуществующего товара.
+     * Проверяет генерацию 404 ошибки в реактивном потоке при поиске доменной модели несуществующего товара.
      * </summary>
      **/
     @Test
-    void findModelByIdShouldThrowResponseStatusExceptionWhenItemDoesNotExist()
-    {
+    void findModelByIdShouldThrowResponseStatusExceptionWhenItemDoesNotExist() {
         long nonExistingId = 999L;
 
-        Mockito.when(itemRepository.findById(nonExistingId)).thenReturn(Optional.empty());
+        Mockito.when(itemRepository.findById(nonExistingId)).thenReturn(Mono.empty());
 
-        var exception = Assertions.assertThrows(ResponseStatusException.class, () -> {
-            itemService.findModelById(nonExistingId);
-        });
-
-        Assertions.assertEquals(HttpStatus.NOT_FOUND, exception.getStatusCode());
+        StepVerifier.create(itemService.findModelById(nonExistingId))
+                .expectErrorMatches(throwable ->
+                        {
+                            if (!(throwable instanceof ResponseStatusException) ||
+                                    !((ResponseStatusException) throwable).getStatusCode().equals(HttpStatus.NOT_FOUND))
+                                return false;
+                            assert ((ResponseStatusException) throwable).getReason() != null;
+                            return ((ResponseStatusException) throwable).getReason().equals("Item not found.");
+                        }
+                )
+                .verify();
     }
 
     // endregion
@@ -186,12 +186,11 @@ public class ItemServiceImplTest {
 
     /**
      * <summary>
-     * Проверяет сборку нефильтрованной страницы каталога, когда поисковая строка пуста или нормализуется в пустую.
+     * Проверяет сборку нефильтрованной страницы каталога с использованием мока CatalogHelper.
      * </summary>
      **/
     @Test
-    void findCatalogShouldReturnUnfilteredPageWhenSearchIsBlank()
-    {
+    void findCatalogShouldReturnUnfilteredPageWhenSearchIsBlank() {
         var rawSearch = "   ";
 
         var normalizedSearch = "";
@@ -202,19 +201,15 @@ public class ItemServiceImplTest {
 
         var pageSize = 10;
 
-        var sortOrder = Sort.unsorted();
-
-        var pageable = PageRequest.of(0, 10, sortOrder);
-
         var item = new ItemModel("Товар", "Описание", "/img.png", 100L);
 
         ReflectionTestUtils.setField(item, "id", 1L);
 
         var itemsList = List.of(item);
 
-        var itemsPage = new PageImpl<>(itemsList, pageable, 1);
-
         var mockCounts = Map.of(item.getId(), 2);
+
+        var pageable = PageRequest.of(0, 10, Sort.unsorted());
 
         Mockito.when(catalogHelper.normalizeSearch(rawSearch)).thenReturn(normalizedSearch);
 
@@ -222,35 +217,37 @@ public class ItemServiceImplTest {
 
         Mockito.when(catalogHelper.normalizePageSize(pageSize)).thenReturn(pageSize);
 
-        Mockito.when(catalogHelper.resolveSort(Mockito.any(ItemSortEnumModel.class))).thenReturn(sortOrder);
+        Mockito.when(catalogHelper.resolveSort(Mockito.any())).thenReturn(Sort.unsorted());
 
-        Mockito.when(itemRepository.findAll(pageable)).thenReturn(itemsPage);
+        Mockito.when(itemRepository.findByTitleContainingIgnoreCaseOrDescriptionContainingIgnoreCase("", "", pageable))
+                .thenReturn(Flux.just(item));
 
-        Mockito.when(cartService.findCountsForItems(Mockito.anyList())).thenReturn(mockCounts);
+        Mockito.when(itemRepository.countByTitleContainingIgnoreCaseOrDescriptionContainingIgnoreCase("", ""))
+                .thenReturn(Mono.just(1L));
+
+        Mockito.when(cartService.findCountsForItems(List.of(1L))).thenReturn(Mono.just(mockCounts));
 
         Mockito.when(itemMapper.toRows(itemsList, mockCounts)).thenReturn(Collections.emptyList());
 
-        var catalogResult = itemService.findCatalog(rawSearch, rawSort, pageNumber, pageSize);
+        StepVerifier.create(itemService.findCatalog(rawSearch, rawSort, pageNumber, pageSize))
+                .expectNextMatches(catalogResult ->
+                        catalogResult.search().isEmpty()
+                )
+                .verifyComplete();
 
-        Assertions.assertNotNull(catalogResult);
+        Mockito.verify(catalogHelper, Mockito.times(1)).normalizeSearch(rawSearch);
 
-        Assertions.assertEquals(normalizedSearch, catalogResult.search());
-
-        Mockito.verify(itemRepository, Mockito.times(1)).findAll(pageable);
-
-        Mockito.verify(itemRepository, Mockito.never()).findByTitleContainingIgnoreCaseOrDescriptionContainingIgnoreCase(
-                Mockito.anyString(), Mockito.anyString(), Mockito.any(PageRequest.class)
-        );
+        Mockito.verify(itemRepository, Mockito.times(1))
+                .findByTitleContainingIgnoreCaseOrDescriptionContainingIgnoreCase("", "", pageable);
     }
 
     /**
      * <summary>
-     * Проверяет сборку страницы каталога с фильтрацией по поисковой строке (поиск без учета регистра).
+     * Проверяет сборку страницы каталога с фильтрацией по поисковой строке.
      * </summary>
      **/
     @Test
-    void findCatalogShouldReturnFilteredPageWhenSearchIsNotBlank()
-    {
+    void findCatalogShouldReturnFilteredPageWhenSearchIsNotBlank() {
         var rawSearch = "novation";
 
         var normalizedSearch = "novation";
@@ -261,19 +258,13 @@ public class ItemServiceImplTest {
 
         var pageSize = 5;
 
-        var sortOrder = Sort.unsorted();
+        var matchingItem = new ItemModel("Novation Launchkey 88", "MIDI", "/img.png", 45000L);
 
-        var pageable = PageRequest.of(0, 5, sortOrder);
+        ReflectionTestUtils.setField(matchingItem, "id", 1L);
 
-        var item = new ItemModel("Novation Launchkey 88", "MIDI", "/img.png", 45000L);
+        var mockCounts = Map.of(matchingItem.getId(), 1);
 
-        ReflectionTestUtils.setField(item, "id", 1L);
-
-        var itemsList = List.of(item);
-
-        var itemsPage = new PageImpl<>(itemsList, pageable, 1);
-
-        var mockCounts = Map.of(item.getId(), 1);
+        var pageable = PageRequest.of(0, 5, Sort.unsorted());
 
         Mockito.when(catalogHelper.normalizeSearch(rawSearch)).thenReturn(normalizedSearch);
 
@@ -281,25 +272,28 @@ public class ItemServiceImplTest {
 
         Mockito.when(catalogHelper.normalizePageSize(pageSize)).thenReturn(pageSize);
 
-        Mockito.when(catalogHelper.resolveSort(Mockito.any(ItemSortEnumModel.class))).thenReturn(sortOrder);
+        Mockito.when(catalogHelper.resolveSort(Mockito.any())).thenReturn(Sort.unsorted());
 
-        Mockito.when(itemRepository.findByTitleContainingIgnoreCaseOrDescriptionContainingIgnoreCase(
-                normalizedSearch, normalizedSearch, pageable)).thenReturn(itemsPage);
+        Mockito.when(itemRepository.findByTitleContainingIgnoreCaseOrDescriptionContainingIgnoreCase(normalizedSearch, normalizedSearch, pageable))
+                .thenReturn(Flux.just(matchingItem));
 
-        Mockito.when(cartService.findCountsForItems(Mockito.anyList())).thenReturn(mockCounts);
+        Mockito.when(itemRepository.countByTitleContainingIgnoreCaseOrDescriptionContainingIgnoreCase(normalizedSearch, normalizedSearch))
+                .thenReturn(Mono.just(1L));
 
-        Mockito.when(itemMapper.toRows(itemsList, mockCounts)).thenReturn(Collections.emptyList());
+        Mockito.when(cartService.findCountsForItems(List.of(1L))).thenReturn(Mono.just(mockCounts));
 
-        var catalogResult = itemService.findCatalog(rawSearch, rawSort, pageNumber, pageSize);
+        Mockito.when(itemMapper.toRows(List.of(matchingItem), mockCounts)).thenReturn(Collections.emptyList());
 
-        Assertions.assertNotNull(catalogResult);
+        StepVerifier.create(itemService.findCatalog(rawSearch, rawSort, pageNumber, pageSize))
+                .expectNextMatches(catalogResult ->
+                        catalogResult.search().equals(normalizedSearch)
+                )
+                .verifyComplete();
 
-        Assertions.assertEquals(normalizedSearch, catalogResult.search());
+        Mockito.verify(catalogHelper, Mockito.times(1)).normalizeSearch(rawSearch);
 
         Mockito.verify(itemRepository, Mockito.times(1))
                 .findByTitleContainingIgnoreCaseOrDescriptionContainingIgnoreCase(normalizedSearch, normalizedSearch, pageable);
-
-        Mockito.verify(itemRepository, Mockito.never()).findAll(pageable);
     }
 
     // endregion
